updated team yaml and image creatives #2

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,5 @@ Gemfile.lock
 !apex-salesforce-developer.png
 !nuben-cloud-architect.png
 !reva-code-reviewer.png
+!alkali-team-coordinator.png
 .DS_Store
