--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -142,28 +142,31 @@ members:
       - Python
 
   -
-    name: Apex
-    slug: apex-gai
+    name: Nuben
+    slug: nuben-gai
     enabled: true
-    image_src: &site_url /assets/img/photos/team/apex-salesforce-developer.png
-    image_srcset: &site_url /assets/img/photos/team/apex-salesforce-developer.png 2x
-    role: Salesforce Developer Agent
+    image_src: &site_url /assets/img/photos/team/nuben-cloud-architect.jpg
+    image_srcset: &site_url /assets/img/photos/team/nuben-cloud-architect.jpg 2x
+    role: Cloud Architecture Agent
     bio: "..."
     skills:
-      - Apex
-      - SOQL
-      - SOSL
-      - Flows
-      
+      - GCP
+      - AWS
+      - Azure
+      - Solution Architecture
+      - Architecture Diagramming
+
   -
-    name: Alkali
-    slug: alkali-gai
+    name: Reva
+    slug: reva-gai
     enabled: true
-    image_src: &site_url /assets/img/photos/team/alkali-business-analyst.png
-    image_srcset: &site_url /assets/img/photos/team/alkali-business-analyst.png 2x
-    role: Team Coordination Agent
+    image_src: &site_url /assets/img/photos/team/reva-code-reviewer.jpg
+    image_srcset: &site_url /assets/img/photos/team/reva-code-reviewer.jpg 2x
+    role: Code Review Agent
     bio: "..."
     skills:
+      - Domain Research
+      - Technical Discovery
       - Requirements Analysis
       - Scoping & Alignment
 
@@ -187,8 +190,8 @@ members:
     name: Incub<u>a</u>
     slug: incuba-gai
     enabled: true
-    image_src: &site_url /assets/img/photos/team/incuba-researcher.png
-    image_srcset: &site_url /assets/img/photos/team/incuba-researcher.png 2x
+    image_src: &site_url /assets/img/photos/team/incuba-researcher.jpg
+    image_srcset: &site_url /assets/img/photos/team/incuba-researcher.jpg 2x
     role: Research Agent
     bio: "..."
     skills:
@@ -196,32 +199,32 @@ members:
       - Technical Discovery
       - Requirements Analysis
       - Scoping & Alignment
-  -
-    name: Nuben
-    slug: nuben-gai
-    enabled: true
-    image_src: &site_url /assets/img/photos/team/nuben-cloud-architect.png
-    image_srcset: &site_url /assets/img/photos/team/nuben-cloud-architect.png 2x
-    role: Cloud Architecture Agent
-    bio: "..."
-    skills:
-      - GCP
-      - AWS
-      - Azure
-      - Solution Architecture
-      - Architecture Diagramming
 
   -
-    name: Reva
-    slug: reva-gai
+    name: Apex
+    slug: apex-gai
     enabled: true
-    image_src: &site_url /assets/img/photos/team/reva-code-reviewer.png
-    image_srcset: &site_url /assets/img/photos/team/reva-code-reviewer.png 2x
-    role: Code Review Agent
+    image_src: &site_url /assets/img/photos/team/apex-salesforce-developer.jpg
+    image_srcset: &site_url /assets/img/photos/team/apex-salesforce-developer.jpg 2x
+    role: Salesforce Developer Agent
     bio: "..."
     skills:
-      - Domain Research
-      - Technical Discovery
+      - Apex
+      - SOQL
+      - SOSL
+      - Flows
+      
+  -
+    name: Alkali
+    slug: alkali-gai
+    enabled: true
+    image_src: &site_url /assets/img/photos/team/alkali-team-coordinator.jpg
+    image_srcset: &site_url /assets/img/photos/team/alkali-team-coordinator.jpg 2x
+    role: Team Coordination Agent
+    bio: "..."
+    skills:
+      - SCRUM
+      - TeamOps
       - Requirements Analysis
       - Scoping & Alignment
 
@@ -229,8 +232,8 @@ members:
     name: Incub<u>o</u>
     slug: incubo-gai
     enabled: true
-    image_src: &site_url /assets/img/photos/team/incubo-researcher.png
-    image_srcset: &site_url /assets/img/photos/team/incubo-researcher.png 2x
+    image_src: &site_url /assets/img/photos/team/incubo-researcher.jpg
+    image_srcset: &site_url /assets/img/photos/team/incubo-researcher.jpg 2x
     role: Research Agent
     bio: "..."
     skills:
