added Tiniki and Squirrel bios

--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -133,7 +133,10 @@ members:
     image_src: &site_url /assets/img/photos/team/tiniki.jpg
     image_srcset: &site_url /assets/img/photos/team/tiniki.jpg 2x
     role: Frontend Engineering Agent
-    bio: "..."
+    bio: >
+      <p><b>Tiniki</b> is a digital agent we built to make our <b>frontend engineering</b> workflows more efficient. Powered by select SoTA open-source LLMs and data frameworks, Tiniki has been trained to leverage proprietary AxOps design and code datasets to interpret and execute technical UI/UX requirements.</p>
+      <p>Built with the ambitious aim of entirely eliminating any undifferentiated heavy lifting from our frontend workflows, it currently automates most of the "boring stuff" with minimal human intervention.</p>
+      <p>In doing so, it boosts developer productivity and velocity, allowing the wider team to focus on value creation and delivering exceptional user experiences for our clients.</p>
     skills:
       - Vite
       - React
@@ -178,12 +181,13 @@ members:
     image_srcset: &site_url /assets/img/photos/team/squirrel.jpg 2x
     role: Backend Engineering Agent
     bio: >
-      <p>Squirrel is a digital agent, backed by selected open-source large language models fine-tuned on proprietary AxOps backend code datasets. It's responsibilities include interpreting task requirements, and performing and explaining project-specific backend engineering tasks.</p>
-      <p>Guided by the expertise and vision of our human team members, it plays a critical role in automating and optimizing various engineering processes in the company, helping the wider team ensure the efficient and reliable delivery of projects.</p> 
-      <p>As a key member of our distributed engineering organization, Squirrel empowers us to deliver exceptional results while minimizing errors and maximizing developer productivity.</p>
+      <p><b>Squirrel</b> is an advanced digital agent powered by select SoTA open-source LLMs (large language models) and data frameworks. It has been trained to leverage proprietary AxOps code datasets, enabling it to interpret technical requirements and handle <b>backend engineering</b> tasks with precision.</p>
+      <p>Guided by the expertise and vision of our human team members, Squirrel automates and optimizes our engineering workflows, helping us ensure efficient and reliable project delivery.</p>
+      <p>It plays a critical role in our engineering organization, taking care of all undifferentiated heavy lifting, thereby also reducing errors, and boosting overall developer productivity and velocity.</p>
     skills:
       - Rust
       - C/C++
+      - Q/Kdb+
       - Python
       - TypeScript
       - AWS CDK
