updated data intelligence navigation items

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -107,7 +107,7 @@
       enabled: true
       children:
         -
-          name: Applied AI & ML
+          name: Applied Data & AI Solutions
           url: '#applied-ai-ml-data-science-consulting'
           enabled: true
         -
