--- a/_data/pageconfig/case-studies.yml
+++ b/_data/pageconfig/case-studies.yml
@@ -54,6 +54,92 @@ scales:
     slug: /case-studies/scale/small-midsize-business
 
 members:
+  solution-architecture-financial-asset-management-quantitative-research-development-firm:
+    enabled: true
+    title: "Case Study: Financial Asset Management Portal, CRM & ERP on AWS"
+    subtitle: Consultative Support for Architecting a Bespoke Financial Asset Management Solution for a Quant R&D Firm.
+    slug: solution-architecture-financial-asset-management-quantitative-research-development-firm
+    image_src: &site_url /assets/img/illustrations/case-studies/solution-architecture-financial-asset-management-quantitative-research-development-firms.jpg
+    industry: "Financial Services"
+    service: "Application Engineering"
+    scale: "Enterprise"
+    challenges: >
+      <p>A Quantitative Research & Development firm specializing in financial services approached us for consultative support in designing a robust, scalable solution to manage its growing portfolio of quantitative research products and services. The firm offers sophisticated financial models, data analytics, and investment insights to a wide range of clients, including large financial institutions and individual investors.</p>
+
+      <p>Their existing system was struggling to handle the increasing demand for real-time data processing from multiple market data feeds and alternative data sources, accessible via APIs. Additionally, the firm needed a solution to unify financial portfolio management with a custom-built CRM and ERP system to streamline internal operations and enhance customer relationship management.</p>
+    research_and_development: >
+      <p>The primary objectives of the client were:
+        <ol>
+          <li>Integrate real-time market and alternative data sources, enabling the firm to enhance its quantitative research capabilities and provide timely insights to its clients.</li>
+          <li>Create a unified system that could manage financial portfolio research and client interactions via a custom-built CRM and ERP system.</li>
+          <li>Ensure scalability for future growth as the firm expanded its client base and product offerings.</li>
+          <li>Provide robust, multi-tenant support to cater to both institutional and individual clients while maintaining data security and segregation.</li>
+        </ol>
+      </p>
+
+      <p>We began by analyzing the firm’s current infrastructure, which was fragmented and not capable of handling the firm’s expanding needs. Their legacy systems struggled with integrating third-party data feeds and supporting real-time analytics for portfolio management. Additionally, the current CRM and ERP systems were largely off-the-shelf solutions that lacked customization, creating inefficiencies in managing customer relationships and internal operations.</p>
+
+      <p>Key findings included:
+        <ol>
+            <li><b>System Fragmentation:</b> The firm’s tools for quantitative research, CRM, and ERP were isolated from each other, resulting in significant data silos and process inefficiencies..</li>
+            <li><b>Lack of Scalability:</b> The current systems could not handle the growing volume of data or the increasing complexity of the firm’s research products.</li>
+            <li><b>Security Gaps:</b> The system needed to be more secure, particularly with respect to handling sensitive financial data and managing multiple clients under a multi-tenant architecture.</li>
+        </ol>
+      </p>
+
+      <p>Based on this analysis, we recommended leveraging AWS cloud-native services for their ability to integrate seamlessly with third-party APIs, provide scalability, and maintain high levels of security.</p>
+
+      <p>Key services recommended:
+        <ol>
+            <li><b>Amazon RDS</b> for managing relational data, allowing for structured storage of client portfolios, CRM records, and ERP transactions.</li>
+            <li><b>AWS Lambda</b> for serverless, real-time data processing, enabling the firm to process large amounts of data from multiple sources without the need for dedicated infrastructure.</li>
+            <li><b>Amazon API Gateway</b> to manage external data integrations, particularly market data feeds and alternative data sources that the firm relies on for quantitative analysis.</li>
+            <li><b>Amazon S3</b> for secure and scalable storage of large datasets and research outputs.</li>
+            <li><b>AWS Cognito</b> to manage multi-tenant user authentication and ensure secure client access while adhering to strict data privacy requirements.</li>
+        </ol>
+      </p> 
+
+    architecture: >
+      <p>The architecture we recommended was designed with flexibility, scalability, and security in mind, with a focus on unifying the firm’s operations and allowing it to expand its product offerings with minimal disruption.
+        <ol>
+            <li><b>Data Storage:</b> We proposed Amazon RDS to store structured data related to the firm’s research products, client portfolios, CRM, and ERP activities. This would enable the firm to store, query, and manage large datasets with ease, while also supporting future scalability needs.</li>
+            <li><b>API Integration:</b> To integrate market and alternative data feeds, Amazon API Gateway was recommended. This would act as a central interface for pulling in real-time data from external sources and feeding it into the firm’s quantitative models. The gateway would provide secure and scalable access to these APIs, ensuring that data could be processed efficiently, regardless of volume.</li>
+            <li><b>Business Logic and Data Processing:</b> AWS Lambda was recommended to handle serverless execution of the firm’s data processing algorithms, including real-time analytics, portfolio management updates, and other critical computations. This would allow the firm to handle large amounts of data without the need for traditional servers, reducing infrastructure costs and improving system responsiveness.</li>
+            <li><b>Multi-Tenant Support:</b> AWS Cognito was recommended to manage user authentication and ensure secure, segregated access to the platform. Each client (institutional or individual) would have their own data partition in RDS, allowing them to interact with their portfolio and research tools securely, while IAM policies would restrict access to sensitive internal operations.</li>
+            <li><b>Security and Compliance:</b> The firm required a solution that adhered to strict security and compliance guidelines, especially given its dealings with financial institutions. Encryption at rest and in transit was to be implemented via AWS Key Management Service (KMS). We also recommended using AWS CloudTrail and AWS Config to provide real-time monitoring, auditing, and compliance reporting.</li>
+        </ol>
+      </p>
+
+    deployment: >
+      <p>Though the solution was still in the design phase, we provided clear recommendations for how to deploy it effectively:
+        <ol>
+          <li><b>Infrastructure as Code:</b> We advised using AWS CloudFormation to define and automate the infrastructure setup. This would ensure consistent deployments across different environments (development, staging, and production) and allow the firm to quickly provision resources as their needs grew.</li>
+          <li><b>CI/CD Pipeline:</b> To support continuous integration and deployment, we recommended the implementation of AWS CodePipeline and CodeDeploy. This would allow for fast, reliable updates to the platform without downtime, ensuring that new features and bug fixes could be rolled out in a controlled manner.</li>
+          <li><b>Security Best Practices:</b> To secure the infrastructure, we recommended configuring security groups, VPCs, and NACLs to control network access, ensuring that only trusted sources could communicate with critical resources. Additionally, we proposed regular penetration testing and security audits to identify and address potential vulnerabilities.</li>
+          <li><b>Testing & Validation:</b> We recommended a thorough testing strategy that included performance tests to validate the scalability of real-time data processing, security tests to ensure that sensitive client data remained secure, and user acceptance tests to ensure that the CRM and ERP systems met the firm’s operational needs.</li>
+        </ol>
+      </p>
+
+    conclusion: >
+      <p>The implementation of the serverless OCR data processing solution provided significant business value to the client. By integrating AWS's serverless services with the client's on-prem CRM, the client was able to automate a previously manual and error-prone process, resulting in:
+
+        <ol>
+          <li><b>80% reduction in processing time:</b> Documents that previously took hours to process manually were now processed in minutes.</li>
+          <li><b>Significant cost savings:</b> The client experienced a 35% reduction in operational costs, primarily due to the elimination of manual data entry and the pay-per-use nature of the application.</li>
+          <li><b>Improved data accuracy:</b> The solution reduced human errors by automating the data extraction and entry process.</li>
+          <li><b>Scalability:</b> The client’s document processing capability scaled effortlessly to meet growing demands without requiring additional infrastructure.</li>
+        </ol>
+      </p>
+      
+      <p>The new architecture resolved the client’s pain points by delivering a solution that not only optimized their current workflow but also positioned them for future growth. The use of serverless technology allowed the client to focus on their core business, confident that their data processing system could grow with them.</p>
+      
+    technologies:
+      - S3
+      - SQL
+      - Lambda
+      - Textract
+      - Step Functions
+    
   automating-manual-data-entry-serverless-aws-on-prem-proprietary-apis.md:
     enabled: true
     title: "Case Study: Automating Data Entry in On-Prem CRM with AWS Services"
